Modernize <Avatar> component code, fix an overflow bug

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -1423,7 +1423,7 @@
   &:focus {
     outline: none;
 
-    .module-avatar {
+    .module-Avatar {
       @include keyboard-mode {
         box-shadow: 0 0 0 3px $ultramarine-ui-light;
       }
@@ -3980,322 +3980,6 @@ button.module-conversation-details__action-button {
   }
 }
 
-// Module: Avatar
-
-.module-avatar {
-  position: relative;
-  vertical-align: middle;
-  display: inline-block;
-  border-radius: 50%;
-  user-select: none;
-
-  img {
-    object-fit: cover;
-    border-radius: 50%;
-  }
-}
-
-.module-avatar-button {
-  @include button-reset;
-
-  // Ensures that the border of the item sticks tight to the inner contents
-  width: 100%;
-  line-height: 0;
-  border-radius: 50%;
-
-  @include keyboard-mode {
-    &:focus {
-      box-shadow: 0px 0px 0px 2px $ultramarine-ui-light;
-    }
-  }
-}
-
-.module-avatar__label {
-  width: 100%;
-  text-align: center;
-  font-weight: bold;
-  text-transform: uppercase;
-
-  @include light-theme {
-    color: $color-white;
-  }
-  @include dark-theme {
-    color: $color-gray-05;
-  }
-}
-
-.module-avatar__icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.module-avatar__icon--group {
-  @include light-theme {
-    @include color-svg('../images/icons/v2/group-outline-40.svg', $color-white);
-  }
-  @include dark-theme {
-    @include color-svg(
-      '../images/icons/v2/group-outline-40.svg',
-      $color-gray-05
-    );
-  }
-}
-
-.module-avatar__icon--direct {
-  @include light-theme {
-    @include color-svg(
-      '../images/icons/v2/profile-outline-40.svg',
-      $color-white
-    );
-  }
-  @include dark-theme {
-    @include color-svg(
-      '../images/icons/v2/profile-outline-40.svg',
-      $color-gray-05
-    );
-  }
-}
-
-.module-avatar--28 {
-  min-width: 28px;
-  height: 28px;
-  width: 28px;
-
-  img {
-    height: 28px;
-    width: 28px;
-  }
-}
-
-.module-avatar__icon--28.module-avatar__icon--group {
-  height: 20px;
-  width: 20px;
-  @include light-theme {
-    @include color-svg('../images/icons/v2/group-outline-20.svg', $color-white);
-  }
-  @include dark-theme {
-    @include color-svg(
-      '../images/icons/v2/group-outline-20.svg',
-      $color-gray-05
-    );
-  }
-}
-.module-avatar__icon--28.module-avatar__icon--direct {
-  height: 20px;
-  width: 20px;
-  @include light-theme {
-    @include color-svg(
-      '../images/icons/v2/profile-outline-20.svg',
-      $color-white
-    );
-  }
-  @include dark-theme {
-    @include color-svg(
-      '../images/icons/v2/profile-outline-20.svg',
-      $color-gray-05
-    );
-  }
-}
-
-.module-avatar__label--28 {
-  font-size: 14px;
-  line-height: 28px;
-}
-
-.module-avatar--32 {
-  height: 32px;
-  width: 32px;
-  min-width: 32px;
-
-  img {
-    height: 32px;
-    width: 32px;
-  }
-}
-
-.module-avatar__icon--32.module-avatar__icon--group {
-  height: 20px;
-  width: 20px;
-  @include light-theme {
-    @include color-svg('../images/icons/v2/group-outline-20.svg', $color-white);
-  }
-  @include dark-theme {
-    @include color-svg(
-      '../images/icons/v2/group-outline-20.svg',
-      $color-gray-05
-    );
-  }
-}
-.module-avatar__icon--32.module-avatar__icon--direct {
-  height: 20px;
-  width: 20px;
-  @include light-theme {
-    @include color-svg(
-      '../images/icons/v2/profile-outline-20.svg',
-      $color-white
-    );
-  }
-  @include dark-theme {
-    @include color-svg(
-      '../images/icons/v2/profile-outline-20.svg',
-      $color-gray-05
-    );
-  }
-}
-
-.module-avatar__label--32 {
-  font-size: 14px;
-  line-height: 32px;
-}
-
-.module-avatar--52 {
-  height: 52px;
-  width: 52px;
-  min-width: 52px;
-
-  img {
-    height: 52px;
-    width: 52px;
-  }
-}
-
-.module-avatar__label--52 {
-  width: 52px;
-  font-size: 22px;
-  letter-spacing: 0.19px;
-  line-height: 52px;
-}
-
-.module-avatar__icon--52 {
-  height: 38px;
-  width: 38px;
-}
-.module-avatar__icon--52.module-avatar__icon--direct {
-  height: 42px;
-  width: 42px;
-}
-
-.module-avatar--80 {
-  height: 80px;
-  width: 80px;
-  min-width: 80px;
-
-  img {
-    height: 80px;
-    width: 80px;
-  }
-}
-
-.module-avatar__label--80 {
-  width: 80px;
-  font-size: 40px;
-  line-height: 80px;
-}
-
-.module-avatar__icon--80 {
-  height: 58px;
-  width: 58px;
-}
-
-.module-avatar__icon--80.module-avatar__icon--direct {
-  height: 62px;
-  width: 62px;
-}
-
-.module-avatar--96 {
-  height: 96px;
-  width: 96px;
-  min-width: 96px;
-
-  img {
-    height: 96px;
-    width: 96px;
-  }
-}
-
-.module-avatar__label--96 {
-  width: 96px;
-  font-size: 48px;
-  line-height: 96px;
-}
-
-.module-avatar__icon--96 {
-  height: 70px;
-  width: 70px;
-}
-
-.module-avatar--112 {
-  height: 112px;
-  width: 112px;
-  min-width: 112px;
-
-  img {
-    height: 112px;
-    width: 112px;
-  }
-}
-
-.module-avatar__label--112 {
-  width: 112px;
-  font-size: 56px;
-  line-height: 112px;
-}
-
-.module-avatar__icon--112 {
-  height: 81px;
-  width: 81px;
-}
-.module-avatar__icon--112.module-avatar__icon--direct {
-  height: 87px;
-  width: 87px;
-}
-
-.module-avatar__icon--note-to-self {
-  width: 70%;
-  height: 70%;
-
-  @include light-theme {
-    @include color-svg('../images/note-28.svg', $color-white);
-  }
-  @include dark-theme {
-    @include color-svg('../images/note-28.svg', $color-gray-05);
-  }
-}
-
-.module-avatar--no-image {
-  @include light-theme {
-    background-color: $color-conversation-grey;
-  }
-  @include dark-theme {
-    background-color: $color-conversation-grey-shade;
-  }
-}
-
-.module-avatar__spinner-container {
-  padding: 4px;
-}
-
-.module-avatar--signal-blue {
-  background-color: $ultramarine-ui-light;
-}
-
-@each $color, $value in $conversation-colors {
-  .module-avatar--#{$color} {
-    @include light-theme {
-      background-color: $value;
-    }
-  }
-}
-@each $color, $value in $conversation-colors-shade {
-  .module-avatar--#{$color} {
-    @include dark-theme {
-      background-color: $value;
-    }
-  }
-}
-
 // Module: Main Header
 
 .module-main-header {
@@ -6684,7 +6368,7 @@ button.module-image__border-overlay:focus {
       }
 
       // The avatar image can be dragged on Windows.
-      .module-avatar img {
+      .module-Avatar img {
         -webkit-user-drag: none;
         -webkit-user-select: none;
       }
